# proposal

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/: main.py
src/config/: settings.py
src/routers/: system_information.py
tests/: conftest.py  constants.py  test_health_check.py  test_proposal.py
